# labo3-2025r

./: .gitignore  pyproject.toml  readme.md
notebooks/0_edas/: eda.ipynb  eda_v2.ipynb
notebooks/1_armado_base_completa/: armado_base_v2.ipynb
notebooks/2_feature_engineering/: feature_engineering.ipynb
notebooks/3_post_procesamiento_train_validation_predict_split/: post_procesamiento_y_separar_dataset.ipynb
notebooks/4_modelado/lgbm/: lgbm_optuna_y_ensamble_semillas.ipynb
notebooks/4_modelado/medias/: medias.ipynb
notebooks/4_modelado/regresion_lineal/: medias_v3.ipynb  modelo_regresion_2018_para_predecir_con_2019_v3.ipynb
notebooks/4_modelado/series_tiempo/: auto_arima_script_v2.py
notebooks/5_modelo_final/: modelo_final.ipynb
src/data_exploration/: eda_functions.py
src/utils/: utils.py
