[project]
name = "src"
version = "0.1.0"
description = "Librería local para forecasting"
readme = "readme.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "numpy (>=2.3.0,<3.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "polars[pyarrow] (>=1.31.0,<2.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "optuna (>=4.4.0,<5.0.0)",
    "optuna-dashboard (>=0.19.0,<0.20.0)",
    "optuna-integration[lightgbm] (>=4.4.0,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
